--- a/DIS_Price_Prediction.ipynb
+++ b/DIS_Price_Prediction.ipynb
@@ -408,7 +408,7 @@
       "source": [
         "import yfinance as yf\n",
         "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt # Plotting\n",
+        "import matplotlib.pyplot as plt\n",
         "import statsmodels.api as sm\n",
         "from statsmodels.tsa.ar_model import AutoReg, ar_select_order\n",
         "\n",
